--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-NAME: Zicong Mo
-ID: 804654167
-EMAIL: josephmo1594@ucla.edu
+NAME: Zicong Mo, Benjamin Yang
+ID: 804654167, 904771533
+EMAIL: josephmo1594@ucla.edu, byang77@ucla.edu
 
